#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([linnya], [1.0.2], [http://code.google.com/p/linnyax/issues/list])
AM_INIT_AUTOMAKE(linnya, 1.0.2)
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])

# Set of available languages.
ALL_LINGUAS="en zh_CN zh_HK zh_TW pt_BR"

# Checks for programs.
AC_PROG_CC
AC_ISC_POSIX
CFLAGS="$CFLAGS -DINSTALL_PATH=\\\"$datadir/linnya/\\\""

# Checks for libraries.
PKG_CHECK_MODULES([GTK2], [gtk+-2.0 >= 2.12.0, gthread-2.0])
PKG_CHECK_MODULES([GSTREAMER], [gstreamer-0.10])
PKG_CHECK_MODULES([GSTREAMER_BASE], [gstreamer-base-0.10])

# Checks for header files.
AC_CHECK_HEADERS([libintl.h locale.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Checks for library functions.
AC_FUNC_ALLOCA

# Check for st_blksize in struct stat
AC_ST_BLKSIZE

dnl Add the languages which your application supports to po/LINGUAS
GETTEXT_PACKAGE=linnya
AM_GNU_GETTEXT_VERSION([0.18.1])
AM_GNU_GETTEXT([external])

AC_OUTPUT([	Makefile \
			po/Makefile.in \
			data/Makefile \
			data/icons/Makefile \
			data/scripts/Makefile \
			data/conf/Makefile \
			data/conf/themes/Makefile \
			data/conf/themes/Aero-Fly/Makefile \
			data/conf/themes/Aero-Fly/gtk-2.0/Makefile \
			src/Makefile])