EXTRA_DIST =\
			linnya.svg\
			icon.svg\
			default_album.svg\
			cd.svg\
			audio.svg\
			key.svg\
			lib.svg\
			null.png\
			plugin.svg\
			theme.svg\
			equalizer.svg
icondir = ${datadir}/linnya/ui/icon
icon_DATA =\
			linnya.svg\
			icon.svg\
			default_album.svg\
			cd.svg\
			audio.svg\
			key.svg\
			lib.svg\
			null.png\
			plugin.svg\
			theme.svg\
			equalizer.svg
