EXTRA_DIST =\
			linnya.png\
			icon.png\
			default_album.png\
			cd.png\
			audio.png\
			key.png\
			lib.png\
			null.png\
			plugin.png\
			theme.png\
			equalizer.png
icondir = ${datadir}/linnya/ui/icon
icon_DATA =\
			linnya.png\
			icon.png\
			default_album.png\
			cd.png\
			audio.png\
			key.png\
			lib.png\
			null.png\
			plugin.png\
			theme.png\
			equalizer.png
