EXTRA_DIST= 	panel.rc\
		gtkrc\
		scrollbar.rc\
		arrows/* \
		Buttons/* \
		Check-Radio/* \
		Combo/* \
		Images/Buttons/* \
		Images/Tabs/* \
		ListHeaders/* \
		Menu-Menubar/* \
		others/* \
		panel/* \
		Range/* \
		Scrollbars/* \
		Shadows/* \
		Spin/*	\
		Tabs/* \
		Tree/*

gtkdir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0
gtk_DATA = 	panel.rc\
		gtkrc\
		scrollbar.rc

gtkicon_arrowsdir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/arrows
gtkicon_arrows_DATA = arrows/*

gtkicon_Buttonsdir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Buttons
gtkicon_Buttons_DATA = Buttons/*

gtkicon_Check_Radiodir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Check-Radio
gtkicon_Check_Radio_DATA = Check-Radio/*

gtkicon_Combodir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Combo
gtkicon_Combo_DATA = Combo/*

gtkicon_Images_Buttonsdir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Images/Buttons
gtkicon_Images_Buttons_DATA = Images/Buttons/*

gtkicon_Images_Tabsdir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Images/Tabs
gtkicon_Images_Tabs_DATA = Images/Tabs/*

gtkicon_ListHeadersdir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/ListHeaders
gtkicon_ListHeaders_DATA = ListHeaders/*

gtkicon_Menu_Menubardir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Menu-Menubar
gtkicon_Menu_Menubar_DATA = Menu-Menubar/*

gtkicon_othersdir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/others
gtkicon_others_DATA = others/*

gtkicon_paneldir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/panel
gtkicon_panel_DATA = panel/*

gtkicon_Rangedir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Range
gtkicon_Range_DATA = Range/*

gtkicon_Scrollbarsdir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Scrollbars
gtkicon_Scrollbars_DATA = Scrollbars/*

gtkicon_Shadowsdir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Shadows
gtkicon_Shadows_DATA = Shadows/*

gtkicon_Spindir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Spin
gtkicon_Spin_DATA = Spin/*

gtkicon_Tabsdir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Tabs
gtkicon_Tabs_DATA = Tabs/*

gtkicon_Treedir = ${datadir}/linnya/conf/themes/Aero-Fly/gtk-2.0/Tree
gtkicon_Tree_DATA = Tree/*

