EXTRA_DIST		=\
			ly_btn_close.svg\
			ly_btn_config.png\
			ly_btn_min.svg\
			ly_btn_next.png\
			ly_btn_pause.png\
			ly_btn_play.png\
			ly_btn_prev.png\
			ly_btn_volume.png
			null.png
themedarkcsslinnyaimgdir	= ${datadir}/linnya/uix/theme/dark/gtk-3.0/linnya_img
themedarkcsslinnyaimg_DATA	=\
			ly_btn_close.svg\
			ly_btn_config.png\
			ly_btn_min.svg\
			ly_btn_next.png\
			ly_btn_pause.png\
			ly_btn_play.png\
			ly_btn_prev.png\
			ly_btn_volume.png\
			null.png
