EXTRA_DIST = \
	null.png\
	3inf_btn_cover_normal.png\
	3inf_btn_cover_hover.png\
	3inf_btn_cover_active.png

PROGMAN_NAME	= linnya
PLUGIN_NAME	= inf
PLUGIN_DIR	= ${prefix}/share/${PROGMAN_NAME}/pix
styleimagedir	= ${PLUGIN_DIR}/${PLUGIN_NAME}/style/image
styleimage_DATA = \
	null.png\
	3inf_btn_cover_normal.png\
	3inf_btn_cover_hover.png\
	3inf_btn_cover_active.png