EXTRA_DIST = \
	null.png\
	3lrc_btn_refresh_normal.png\
	3lrc_btn_refresh_hover.png\
	3lrc_btn_refresh_active.png

PROGMAN_NAME	= linnya
PLUGIN_NAME	= lrc
PLUGIN_DIR	= ${prefix}/share/${PROGMAN_NAME}/pix
styleimagedir	= ${PLUGIN_DIR}/${PLUGIN_NAME}/style/image
styleimage_DATA = \
	null.png\
	3lrc_btn_refresh_normal.png\
	3lrc_btn_refresh_hover.png\
	3lrc_btn_refresh_active.png