EXTRA_DIST = \
	null.png\
	3vdo_btn_expander_normal.png\
	3vdo_btn_expander_hover.png\
	3vdo_btn_expander_active.png

PROGMAN_NAME	= linnya
PLUGIN_NAME	= vdo
PLUGIN_DIR	= ${prefix}/share/${PROGMAN_NAME}/pix
styleimagedir	= ${PLUGIN_DIR}/${PLUGIN_NAME}/style/image
styleimage_DATA = \
	null.png\
	3vdo_btn_expander_normal.png\
	3vdo_btn_expander_hover.png\
	3vdo_btn_expander_active.png